--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <td><input type="email" name="email"></td>
                 <td>Accessories:</td>
                 <td><input type="checkbox" name="Hobbies:" value="Swimming">Swimming<br>
-                <input type="checkbox" name="accessories" value="Biking">Biking<br>
-                <input type="checkbox" name="accessories" value="Reading">Reading<br>
-                <input type="checkbox" name="accessories" value="Watching TV">Watching TV<br>
-                <input type="checkbox" name="accessories" value="Playing">Playing<br>
+                <input type="checkbox" name="Hobbies:" value="Biking">Biking<br>
+                <input type="checkbox" name="Hobbies:" value="Reading">Reading<br>
+                <input type="checkbox" name="Hobbies:" value="Watching TV">Watching TV<br>
+                <input type="checkbox" name="Hobbies:" value="Playing">Playing<br>
                 </td>
             </tr>
             <tr>
