--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                     <img src="https://www.verywellfit.com/thmb/7G77UWuA2bDMIi5BhO-Pl-ZuIFs=/4606x3071/filters:fill(FFDB5D,1)/men-running-on-the-gym-treadmill-171582786-5ad7eab41f4e130038eae6f6.jpg" alt="Gubby :D"                         height="150">
                 </td>
                 <td colspan="2">
-                    <p>Do you want a strong and flexible muscles? Join Fitness Program<br> That will be held this August,5,2025 Just your put your name, address, email address,<br> and contact number. Only for a limited time so get your's<br> now very worth-it                     and cheap!<br></p>
+                    <p>Do you want a strong and flexible muscles? Join Fitness Program<br> That will be held this August,5,2025 just put your name, address, email address,<br> and contact number. Only for a limited time so get your's<br> now very worth-it                     and cheap!<br></p>
                 </td>
             </tr>
             <tr>
@@ -25,14 +25,14 @@
                 <td><input type="text" name="address"></td>
             </tr>
             <tr>
-                <td>Email Address:</td>
+                <td>Email Add:</td>
                 <td><input type="email" name="email"></td>
-                <td>Accessories:</td>
+                <td>Hobbies:</td>
                 <td><input type="checkbox" name="Hobbies:" value="Swimming">Swimming<br>
                 <input type="checkbox" name="Hobbies:" value="Biking">Biking<br>
                 <input type="checkbox" name="Hobbies:" value="Reading">Reading<br>
                 <input type="checkbox" name="Hobbies:" value="Watching TV">Watching TV<br>
-                <input type="checkbox" name="Hobbies:" value="Playing">Playing<br>
+                <input type="checkbox" name="Hobbies:" value="Playing">Playing
                 </td>
             </tr>
             <tr>
